# ari-py

./: .buildinfo  .gitignore  .pep8speaks.yml  .pre-commit-config.yaml  README.html  changes.html  genindex.html  index.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  tox.ini
.github/workflows/: bandit.yml  release.yml
_modules/: ari.html  index.html
_modules/ari/: client.html  exceptions.html  model.html
_sources/api/: ari.client.rst.txt  ari.exceptions.rst.txt  ari.model.rst.txt  ari.rst.txt  modules.rst.txt
_static/: documentation_options.js
api/: ari.client.html  ari.exceptions.html  ari.html  ari.model.html  modules.html
ari/: __init__.py  client.py  model.py
docs/source/: conf.py  index.rst
examples/: bridge_example.py  cleanup_example.py  example.py  originate_example.py  playback_example.py
