[metadata]
name = ari
version = attr: ari.__version__
description = ari is a library for accessing the Asterisk ReST Interface
url = https://github.com/asterisk/asterisk_rest_libraries
author = Digium, Inc.
email = dlee@digium.com
maintainer = VCTLabs, Inc.
maintainer_email = answers@vctlabs.com
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license_expression = BSD 3-Clause License
license_files = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules

keywords =
    ARI
    Asterisk
    Swagger

[options]
python_requires = >= 3.6
install_requires =
    six
    # use latest HEAD on develop branch
    swaggerpy @ git+https://github.com/VCTLabs/swaggerpy.git#3359d62ea7462213e1f7e1ce8155ed46f6890e83

packages = find:

[options.packages.find]
exclude =
    docs*
    examples*
    ari_test*

# extra deps are included here mainly for local/venv installs using pip
# otherwise deps are handled via tox, ci config files or pkg managers
[options.extras_require]
doc =
    sphinx
    sphinx_git
    recommonmark
    sphinx_rtd_theme
    sphinxcontrib-apidoc
test =
    httpretty
    pytest
    pytest-cov
cov =
    coverage[toml]
    covdefaults
    # coverage_python_version
all =
    %(cov)s
    %(doc)s
    %(test)s

[check]
metadata = true
restructuredtext = true
strict = false

[check-manifest]
ignore =
    .gitattributes
    .gitignore
    .pre-commit-config.yaml

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    docs,
    ari_test

max-line-length = 90
